<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="RecordActivity">


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editNotka"
        android:layout_width="228dp"
        android:layout_height="106dp"
        android:layout_marginTop="460dp"
        android:singleLine="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.846"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RatingBar
        android:id="@+id/ratingBarRekord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="80dp"
        android:indeterminate="false"
        android:max="5"
        android:numStars="5"
        android:rating="2.5"
        android:stepSize="0.5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editNotka" />

    <TextView
        android:id="@+id/textOko"
        android:layout_width="137dp"
        android:layout_height="53dp"
        android:layout_marginTop="252dp"
        android:gravity="center"
        android:text="@string/textOko"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.065"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinnerOko"
        android:layout_width="228dp"
        android:layout_height="53dp"
        android:layout_marginTop="252dp"
        android:entries="@array/Ratings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.846"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textNos"
        android:layout_width="137dp"
        android:layout_height="53dp"
        android:layout_marginTop="304dp"
        android:gravity="center"
        android:text="@string/textNos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.065"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinnerNos"
        android:layout_width="228dp"
        android:layout_height="53dp"
        android:layout_marginTop="304dp"
        android:entries="@array/Ratings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.846"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textJezyk"
        android:layout_width="137dp"
        android:layout_height="53dp"
        android:layout_marginTop="356dp"
        android:gravity="center"
        android:text="@string/textJezyk"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.065"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinnerJezyk"
        android:layout_width="228dp"
        android:layout_height="53dp"
        android:layout_marginTop="356dp"
        android:entries="@array/Ratings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.846"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textFinisz"
        android:layout_width="137dp"
        android:layout_height="53dp"
        android:layout_marginTop="408dp"
        android:gravity="center"
        android:text="@string/textFinisz"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.065"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textNote"
        android:layout_width="137dp"
        android:layout_height="106dp"
        android:layout_marginTop="460dp"
        android:gravity="center"
        android:text="@string/textNote"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.065"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinnerFinisz"
        android:layout_width="228dp"
        android:layout_height="53dp"
        android:layout_marginTop="408dp"
        android:entries="@array/Ratings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.846"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editZawAlko"
        android:layout_width="228dp"
        android:layout_height="53dp"
        android:layout_marginTop="148dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.846"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textZawAlko"
        android:layout_width="137dp"
        android:layout_height="53dp"
        android:layout_marginTop="148dp"
        android:gravity="center"
        android:text="@string/textZawAlko"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.065"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinnerRegion"
        android:layout_width="228dp"
        android:layout_height="53dp"
        android:layout_marginTop="200dp"
        android:entries="@array/Regions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.846"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textRegion"
        android:layout_width="137dp"
        android:layout_height="53dp"
        android:layout_marginTop="200dp"
        android:gravity="center"
        android:text="@string/textRegion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.065"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editNazwa"
        android:layout_width="228dp"
        android:layout_height="53dp"
        android:layout_marginTop="96dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.846"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textTytul"
        android:layout_width="221dp"
        android:layout_height="28dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="640dp"
        android:gravity="center"
        android:text="@string/textTytul"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.094"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonDodaj"
        android:layout_width="142dp"
        android:layout_height="75dp"
        android:layout_marginTop="16dp"
        android:text="@string/buttonDodaj"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.895"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textNazwa"
        android:layout_width="137dp"
        android:layout_height="53dp"
        android:layout_marginTop="96dp"
        android:gravity="center"
        android:text="@string/textNazwa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.065"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>